kubernetes/apps/database/cloudnative-pg/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudnative-pg
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cloudnative-pg
      app.kubernetes.io/name: cloudnative-pg
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8080
          protocol: TCP
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchExpressions:
              - key: cnpg.io/cluster
                operator: Exists
      ports:
        - port: 8000
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: barman-cloud
              app.kubernetes.io/name: plugin-barman-cloud
      ports:
        - port: 9090
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudnative-pg-api
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cloudnative-pg
      app.kubernetes.io/name: cloudnative-pg
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchName: barman-cloud
              - matchName: barman-cloud.database
              - matchName: barman-cloud.database.svc
              - matchName: barman-cloud.database.svc.cluster.local
